# halo2lg-experiments

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/collatz/: collatz.rs  collatz_one_column.rs  mod.rs
src/fibonacci/: fib_one_column.rs  fib_three_column.rs  mod.rs
src/fibonacci_squares/: fib_squares_three_column.rs  mod.rs
src/is_zero_example/: conditional_calc.rs  mod.rs
src/mimc/: mimc.rs  mimc_hash.rs  mod.rs  primitives.rs
src/mimc_hash/: mimc_hash.rs  mod.rs  pallas_round_constants.rs
src/mimc_pallas/: mimc.rs  mimc_hash.rs  pallas_round_constants.rs
src/simple_example/: mod.rs  simple_example.rs
testcases/: collatz.py  fib_squares.sage
